adding IDs to username + password
Added IDs to input fields (otherwise backend cant work XD)

--- a/login.html
+++ b/login.html
@@ -69,9 +69,9 @@
                 <div><b>Log In</b></div>
                 <div>
                     <div>Username</div>
-                    <div><input></div>
+                    <div><input id="username_input"></div>
                     <div>Password</div>
-                    <div><input type="password"></div>
+                    <div><input type="password" id="password_input"></div>
                     
                 </div>
                 <div><button>Submit</button></div>
